--- a/nonlinear/ps1_Yao.tex
+++ b/nonlinear/ps1_Yao.tex
@@ -43,9 +43,50 @@ Using integration by parts
 \section{Question 2}
 \begin{enumerate}
 	\item
-	\item
-	\item
+	The rental company's maximization problem is:
+	\[\underset{q^B,p^B,q^T,p^T}{max}\frac{2}{3}[p^B - C(q^B)] + \frac{1}{3}[p^T-C(q^T)]\]
+	subject to:
+	\[V^T(q^T) - p^T \geq 0 \]
+	\[V^B(q^B) - p^B \geq 0\]
+	\[V^B(q^B) - p^B \geq V^B(q^T) - p^T\]
+	\[V^T(q^T) - p^T \geq V^T(q^B) - p^B\]
+	Since $V^B(q) - V^T(q) \geq 0 \; \forall q$, the IR condition for the T type is binding:
+	\[V^T(q^T) = p^T\]
+	The IC constraint for B type is also binding:
+	\[V^B(q^B) - p^B = V^B(q^T) - p^T\]
+	The relax problem of ignoring the IC constraint for the T type is:
+	\[\underset{q^B,q^T}{max}\frac{2}{3}[V^B(q^B) - V^B(q^T) +V^T(q^T)- C(q^B)] + \frac{1}{3}[V^T(q^T) - C(q^T)]\]
+	And we need to check the IC for type T holds:
+	\[V^B(q^B) - V^B(q^T) \geq V^T(q^B) - V^T(q^T)\]
+	Denote 
+	\[\pi_B = V^B(q^B) - C(q^B)\]
+	\[\pi_T = V^T(q^T) - \frac{2}{3}V^B(q^T) - \frac{1}{3}C(q^T)\]
+	\[\frac{\partial\pi_B}{\partial q^B} = 30 - 3q^B - 0.05 = 0 \rightarrow q^B = \frac{599}{60}\]
+	Compare it with $q^B = 10$, we get that $\pi_B$ is maximized when $q^B = \frac{599}{60} \approx 9.98$. 
+
+	(1)$q^T \geq 500$
+	\[\frac{\partial\pi_T}{\partial q^T} = -\frac{1}{3}\times0.05\]
+	(2)$10 \leq q^T \leq 500$
+	\[\frac{\partial\pi_T}{\partial q^T} = \frac{1}{2} - \frac{1}{1000}q^T - \frac{1}{3}0.05 = 0 \rightarrow q^T = \frac{2900}{6} \approx 483.33\]
+	(3) $0 \leq q^T \leq 10$
+	\[\frac{\partial\pi_T}{\partial q^T} = \frac{1}{2} - \frac{1}{1000}q^T - \frac{2}{3}[30 - 3q^T] -\frac{1}{3}0.05 = 0 \rightarrow q^T = \frac{117100}{11994} \approx 9.76 \]
+	Therefore, $\pi_T$ is maximized when $q^T = 483.33$.
+	The optimal price schedules are:
+	\[q^B \approx 9.98, q^T \approx 483.33, p^B = \frac{898997}{7200} \approx 124.86, p^T = \frac{4495}{36} \approx 124.86\]
+	Type T does not have the incentive to be type B consider the two prices are basically the same. So IC for type T is satisfied.
+
+	\item Question a does not coincide witht the analysis in class. Mainly because the single crossing assumption $V_{\theta q} \geq 0$ is violated here. 
+	\item Now we don't have the nice property of $V^B(q) - V^T(q) \geq 0 \; \forall q$, IR for T type binds does not imply IR for B type binds. The firm's profit is maximized when both IR constraints are binding. Therefore, 
+	\[\frac{\partial\pi}{\partial q^B} = \frac{2}{3}[30 - 3q^B - 0.05] = 0 \rightarrow q^B = \frac{599}{60}\]
+	\[\frac{\partial\pi}{\partial q^T} = \frac{1}{3}[\frac{1}{2} - \frac{1}{1000}q^T - 0.05] = 0 \rightarrow q^T = 450\]
+	$p^B \approx 150$, $p^T = 123.75$. Check the IC constraints:
+	IC for type B:
+	\[30\times450 - 1.5\times 450^2 - 123.75 \approx -2.9\times10^5 < 0\]
+	IC for type T:
+	\[\frac{1}{2}\times\frac{599}{60} - \frac{1}{2}\frac{1}{1000}\times(\frac{599}{60})^2 - 150 \approx -145 <0\]
+	So both IC constraints are satisfied.
 \end{enumerate}
 \section{Question 3}
+The single crossing assumption might be reasonable for cable TV markets in the sense that higher type (richer) consumers are more willing to pay for cable and have a higher consumption than low type. However, in the rural food staples markets, low type (poor family) tend to have more children and may consume more food than high type (rich family). In this case the single crossing assumption does not make sense. Moreover, in the rental car market above, the preferences do not satisfy single crossing. Therefore, whether single crossing is a reasonable assumption to make depends on the exact market context.
 
 \end{document}
