--- a/ps1_Yao.tex
+++ b/ps1_Yao.tex
@@ -35,9 +35,9 @@ Using integration by parts
 	plus $C_{q\theta} > 0$, the sufficient condition is $\frac{dq(\hat{\theta})}{d\hat{\theta}} \leq 0$. By monotone comparative statics, $\frac{\partial^{2}\psi(q,\theta)}{\partial q\partial\theta} \leq 0$.
 	\[-C_{q\theta}(q,\theta) - \frac{d}{d\theta}[\frac{F(\theta)}{f(\theta)}]C_{q\theta}(q,\theta) - \frac{F(\theta)}{f(\theta)}C_{q\theta\theta} \leq 0\]
 	To satisfy the above inequality, we need to assume $C_{q\theta\theta} \geq 0$.\\
-	From the FOC, 
-	\[P'(q) = V_{q}(q) = C_{q}(q,\theta) + \frac{F(\theta)}{f(\theta)}C_{q\theta}(q,\theta)\]
-	Since $C_{q\theta}(q,\theta)$ is positive, the monopsony purchasing price is higher than the first best case where marginal price equals marginal cost. Because $V_{qq}(q) \leq 0$, the monopsony quantity $q(\theta)$ is lower than the first best quantity $q^{FB}$. Since $F(\underline{\theta}) = 0$, the lowest type is not distorted so $q(\underline{\theta}) = q^{FB}$.
+	From the seller's maximization problem $q = argmax(P(q) - C(q,\theta))$, we have $P'(q) = C_{q}(q,\theta)$. From the buyer's FOC we get: 
+	\[P'(q) = C_{q}(q,\theta) = V_{q}(q) - \frac{F(\theta)}{f(\theta)}C_{q\theta}(q,\theta)\]
+	Since $C_{q\theta}(q,\theta)$ is positive, the monopsony purchasing price is lower than the first best case where marginal price equals marginal cost. Because $C_{qq}(q) \geq 0$, the monopsony quantity $q(\theta)$ is lower than the first best quantity $q^{FB}$. Since $F(\underline{\theta}) = 0$, the lowest type is not distorted so $q(\underline{\theta}) = q^{FB}$.
 
 
 \section{Question 2}
