--- a/research/model.tex
+++ b/research/model.tex
@@ -25,4 +25,7 @@ where $\alpha_{ij}$ measures consumer $i$'s specific taste for firm $j$. $p_j$ i
 \textbf{\textit{Assumption 7}}: Some regulation conditions to make sure all consumers consume in equilibrium.\\
 
 \textbf{\textit{Assumption 8}}: Regulation conditions on demand functions facing the firms.\\
+
+\textbf{\textit{Notes}}: consumers have different postpurchase costs to match the fact that only a small portion of people exercise PMGs.\\
+ 
 \end{document}
