--- a/research/literature.tex
+++ b/research/literature.tex
@@ -1,3 +1,9 @@
-\documentclass[12pt,one side]{article}\usepackage[utf8]{inputenc}\usepackage[a4 paper]{geometry}\usepackage{graphicx, setspace, appendix, mathrsfs, enumerate,amsmath, amsfonts, array, tabularx, longtable, rotating, caption, mathtools}\usepackage[english]{babel}\renewcommand{\baselinestretch}{1.25}\doublespacing\title{Short literature review}\author{Yao Luo}\begin{document}\maketitle
-There are no theoretical papers on the centralized admission mechanism in Inner Mongolia. One empirical working paper has been done which is 
+\documentclass[12pt,one side]{article}\usepackage[utf8]{inputenc}\usepackage[a4 paper]{geometry}\usepackage{graphicx, setspace, appendix, mathrsfs, enumerate,amsmath, amsfonts, array, tabularx, longtable, rotating, caption,natbib, mathtools}\usepackage[english]{babel}\renewcommand{\baselinestretch}{1.25}\doublespacing\bibliographystyle{agsm}\title{Short literature review}\author{Yao Luo}\begin{document}\maketitle
+There have been a few empirical papers on the Inner Mongolia College admission mechanism. \cite{Chen.Pereyra.ea22} focus on the  impact of time-constraint imposed by the authority. \cite{Kang.Ha.ea23} compares the dynamic matching mechanism with the parallel mechanism using justified envy as a criteria. \\
+Theoretically, \cite{Immorlica.Leshno.ea20}  s
+
+
+
+\bibliography{college}
+
 \end{document}
