--- a/school_choice/Yao.tex
+++ b/school_choice/Yao.tex
@@ -66,8 +66,8 @@
 \begin{document}
 
 \rightskip\rightmargin
-\title{Beyond Truth-Telling: Preference Estimation with Centralized School Choice and College Admissions†}
-\author{Gabrielle Fack, Julien Grenet, and Yinghua He}
+\title{}
+\author{}
 
 
 %\institute{Boston College}
@@ -82,36 +82,13 @@
 %
 \footnotesize \tableofcontents
 %
-\section{Introduction}
-\begin{frame}{Introduction}
+\section{}
+\begin{frame}{}
     \begin{itemize}
-        \item Gale-Shapley deferred acceptance (DA) becomes the leading centralized machanism for the placement of students to public schools at every education level. One main reason is strategy-proofness.\\
-        \item Is it reasonable to assume the submitted rank-ordered lists (ROLs) reveal students' true preferences over schools?\\
-        \item The truth-telling assumption can be restrictive when students face only limited uncertainty. e.g. Schools rank students by test scores, students with a low test score might skip the highly selective schools in their ROLs.\\
-        \item The analysis focus on the student-proposing Gale-Shapley deferred acceptance (DA)
         
     \end{itemize}
 \end{frame}
 
-\section{Contributions}
-\begin{frame}{Contributions}
-    \begin{itemize}
-    \item The paper examines the implications of the truth-telling assumption in the situation with limited uncertainty.\\
-    \item The paper proposes a set of novel empirical approaches that are theoretically founded, based on different identifying assumptions: weak truth-telling(WTT), stability and undominated strategies. It also provides statistical tests to guide the choice between these identifying assumptions.\\
-    \item The paper evaluates the performance of each approach based on simulated and real-life data. It illustrate the main theoretical results with Monte Carlo simulations. And it applies the empirical approaches to school choice data from Paris.\\
-    \end{itemize}  
-\end{frame}
-
-\section{Discussion}
-\begin{frame}{Discussion}
-    \begin{itemize}
-        \item The theoretical and empirical results show that it can be rather restrictive to assume truth-telling. Instead, stability provides rich identifying information but weaker than WTT.\\
-        \item Bonus point: the paper provides tests for different assumptions. Conditional on parametric assumption of the model.\\
-        \item In table 7 it summarizes different features which make each assumption more plausible. Nice guidance for empirical work.\\
-        \item Concrete theoretical foundations plus novel empirical approaches. Can extend to settings other than school choice.\\
-
-    \end{itemize}
-\end{frame}
 
 
 \end{document}
