--- a/research/Yao_college.tex
+++ b/research/Yao_college.tex
@@ -1,22 +1,21 @@
-\documentclass[12pt,oneside]{article}\usepackage[utf8]{inputenc}\usepackage[a4paper]{geometry}\usepackage{graphicx,setspace,appendix,mathrsfs,amsmath,amsfonts,array,tabularx,longtable,rotating,caption,mathtools,natbib}\usepackage[english]{babel}\renewcommand{\baselinestretch}{1.25}\bibliographystyle{agsm}\doublespacing\title{Dynamic Machenism in Inner Mongolia College admission}\author{Yao Luo}\begin{document}\maketitle
+\documentclass[12pt,oneside]{article}\usepackage[utf8]{inputenc}\usepackage[a4paper]{geometry}\usepackage{graphicx,setspace,appendix,mathrsfs,amsmath,amsfonts,array,tabularx,longtable,rotating,caption,mathtools,natbib}\usepackage[english]{babel}\renewcommand{\baselinestretch}{1.25}\bibliographystyle{agsm}\doublespacing\title{The impact of information acquisition in college admissions}\author{Yao Luo}\begin{document}\maketitle
 \section{Motivation}
 Every year over 10 million high school graduates join in the National College Entrance Examination (gaokao in mandarin) competing for about 7 million seats. Gaokao is currently the largest centralized matching market in the world. Achieving stable and efficient matching outcomes is extremely important in this market since it affects the welfare of so many students.
 
 Most provinces in China adopted the parallel mechanism (PA), where stduents submit a rank-ordered list (ROL) of certain length to the clearinghouse and colleges admit students solely depending on their test scores until their seats are filled. Different provinces might have different requirement for the ROL length. For example, Hebei province allows for 5 colleges 5 majors under each college. Students have the option to agree or disagree with being allocated to another major not in their list within a college in their list.
 
-The only exception from the PA mechanism is Inner Mongolia, which adopted the dynamic mechanism in 2006. 
+The only exception from the PA mechanism is Inner Mongolia province, which adopted a dynamic mechanism in 2006. I will refer to it as IM in this paper. A nice paper which reviews the history of college admission mechenisms in Inner Mongolia is \cite{Bai22}. Students report their first choice on the online system, and they know their ranking in that major as well as the capacity right after submission. Students have unlimited times of reporting, but with time constraints. For example in 2023, the application process begins at8am, and students with grades above 670 need to finish their application by 11am. Students whose grade fall in the range of 640-669 need to finish their application by 12pm etc. The process ends at 20pm.
 
+The most salient distinction between the PA and IM mechanism is the amount of information students have regarding their chances of admission. Under the PA mechanism, students have access to historical cutoffs of each college. The current year's cutoffs are only achieved after the matching outcomes are realized. Students have to apply based on their expected chances of admission, which requires to form beliefs on cutoffs ex-ante. In contrast, under the IM mechanism students acquire information about cutoffs during the process of application by revising their choices. In this setting, the real-time information of cutoffs for each college plays the role of prices in a normal market, and in equilibrium the stable-matching outcomes shoule be achieved and the final cutoffs work as the market clearing prices. 
 
-Students report their first choice on the online system, and they know their ranking in that major as well as the capacity right after submission. Students have unlimited times of reporting, but with time constraints. For example in 2023, the application process begins at8am, and students with grades above 670 need to finish their application by 11am. Students whose grade fall in the range of 640-669 need to finish their application by 12pm etc. The process ends at 20pm.
+\cite{Immorlica.Leshno.ea20} shows theoretically mechanisms that facilitates efficient price discovery or offer relevant information on cutoffs yield approximately regret-free stable outcomes. In this paper I want to design a model to examine the impact of acquiring information of cutoffs on college admission outcomes empirically, using data from the Inner Mongolia dynamic mechanism. The additional information of college admission chances in IM intuitively should help students to improve their admission outcomes. However, since the information acquisition is costly and students have unlimited times of submission, the extra burden may harm students' welfare and students who fail to search efficiently may have unsatisfactory matching results. This tradeoff leads to ambiguity in welfare analysis and identifying winners and losers when switch from PA to IM mechanism.
 
-Only Inner Mongolia can afford to apply this dynamic mechanism for two reasons. First, it is among the provinces with the lowest number of applicants in China. In 2023 gaokao Inner Mongolia has 185K applicants. While Hebei province has 753K applicants and Henan province has 1.25 million applicants. Second, Inner Mongolia has better economic conditions than many other provinces. For example, Ordos, a city in Inner Mongolia, has the highest GDP per capita.
-
-In this paper, I want to compare dynamic mathing mechanism with parallel maching mechanism both theoretically and empirically to see which mechanism results in more stable and efficient matching outcomes. And explore a good compromise between the computational burden of dynamic matching and matching efficiency. Take into account the negative impact brought by the time constraint and the corresponding grade cutoffs.
 
 \section{Literature Review}
+
 There are theoretical and empirical papers on the parallel mechanism (PA) in China, for example \cite{Chen.Kesten17} and \cite{Chen.Kesten19}.
 
-A nice paper which reviews the history of college admission mechenisms is \cite{Bai22}. There have been a few empirical papers on the Inner Mongolia College admission mechanism. \cite{Chen.Pereyra.ea22} focus on the  impact of time-constraint imposed by the authority, and compare the matching outcomes of time-constrained dynamic mechanism (TCDM) with the stduent-proposing deferred acceptance (DA) mechanism. \cite{Kang.Ha.ea23} compares the dynamic matching mechanism with the parallel mechanism using justified envy as a criteria, but their conclusions are counterintuitive. 
+ There have been a few empirical papers on the Inner Mongolia College admission mechanism. \cite{Chen.Pereyra.ea22} focus on the  impact of time-constraint imposed by the authority, and compare the matching outcomes of time-constrained dynamic mechanism (TCDM) with the stduent-proposing deferred acceptance (DA) mechanism. \cite{Kang.Ha.ea23} compares the dynamic matching mechanism with the parallel mechanism using justified envy as a criteria, but their conclusions are counterintuitive. 
 
 \cite{Bo.Hakimov22} look at the university admissions in Brazil and show that dynamic mechanism can outperform the standard ones since matchings are implemented sequentially and students can revise their choices after receiving information or feedback about their current allocations. 
 
@@ -36,7 +35,7 @@ The Inner Mongolia education authority publish hourly the current cutoffs, the n
 
 %\section{Model}
 \section{Empirical Strategy}
-The limited empirical strategies in the existing literature (mostly working papers) so far are not convincing enough to me. I need to make a summary of them and discuss with Mariana.   
+
 
 \bibliography{college}
 \end{document}
