--- a/research/Yao_college.tex
+++ b/research/Yao_college.tex
@@ -43,5 +43,21 @@ Another dimension for quantifying the quality of the matchings is the number of 
 
 In 2025 Inner Mongolia will switch from IM to PA mechanism, which serves as a natrual experiment. Since students couldn't control which year they would participate in Gaokao, which is decided by their birth year. I can do a difference in difference analysis using the exogenous variation by the mechanism change in year 2025.    
 
+\section{Caveats}
+In this research proposal I ignored the fact that students are applying for a specific program in the college, so implicitly I assumed that the preferences are only over college choices and students do not care about their major. It's a sensible assumption to make in the past when Chinese care a lot about the reputation about the college and do not care much about majors. However, over the years people became more realistic and care more about majors. The dispersion of admitted students' exam scores is increasing. Therefore, the objective of matching mechamism might be altered to include the preference over majors.
+
+Moreover, the universities determine the cutoff scores by their total quota instead of quota of each major. In many cases some major might have too many applicants while some have too few. The university would reassign the lower-ranked students to the unfilled seats of another major even when the stduents do not want it. This sometimes result in terrible assignment result and the student has to go back to high school and retake the Gaokao. Matching students to their prefered majors might be a better objective to achieve in the Chinese Gaokao context. But the current literature has not looked in this direction because of the complication.
+
+One method I propose to accommodate students' major preferences is to allow for full rank of all the majors the university offers instead of only rank 5 majors in each college choice. Pros and cons???
+
+
+
+
+
+
+
+
+
+
 \bibliography{college}
 \end{document}
