--- a/research/slides_Yao.tex
+++ b/research/slides_Yao.tex
@@ -207,7 +207,10 @@ Predictions:
 
 \section{Empirical distribution}
 \begin{frame}{Empirical distribution}
-    
+    \begin{figure}[h!]
+    \centering
+    \includegraphics[width=\textwidth]{pdf.png}
+    \end{figure}
 \end{frame}
 
 \end{document}
